[gd_scene load_steps=6 format=3 uid="uid://deqojbk54rh4y"]

[ext_resource type="Script" path="res://scripts/core/GameRoot.gd" id="1"]
[ext_resource type="Script" path="res://scripts/core/WaveManager.gd" id="2"]
[ext_resource type="Script" path="res://scripts/core/EnemyManager.gd" id="3"]
[ext_resource type="Script" path="res://scripts/core/TowerManager.gd" id="4"]
[ext_resource type="PackedScene" path="res://ui/scenes/HUD.tscn" id="5"]

[node name="GameRoot" type="Node3D"]
script = ExtResource("1")

[node name="WaveManager" type="Node" parent="."]
script = ExtResource("2")

[node name="EnemyManager" type="Node" parent="."]
script = ExtResource("3")

[node name="TowerManager" type="Node" parent="."]
script = ExtResource("4")

[node name="HUD" parent="." instance=ExtResource("5")]
